--- a/project-no-2/src/scss/style.scss
+++ b/project-no-2/src/scss/style.scss
@@ -1,4 +1,9 @@
+@import 'navbar';
 $navbar-color: #21222A;
 $backgound-color: #33373E;
 $navbar-text-color: #DEEBF8;
 $body-text-color: #FFFFFF;
+
+* {
+    margin: 0;
+}
