--- a/project-no-2/src/scss/style.scss
+++ b/project-no-2/src/scss/style.scss
@@ -7,6 +7,11 @@ $navbar-text-color: #DEEBF8;
 
 
 * {
-    margin: 0;
     font-family: 'Inter', sans-serif;
+}
+
+.App {
+    // display: flex;
+    justify-content: center;
+    align-items: center;
 }
