--- a/project-no-2/src/scss/_main.scss
+++ b/project-no-2/src/scss/_main.scss
@@ -1,5 +1,6 @@
 $backgound-color: #33373E;
 $body-text-color: #FFFFFF;
+$bullet-color: #61DAFB;
 
 .main {
     background-color: $backgound-color;
@@ -7,13 +8,41 @@ $body-text-color: #FFFFFF;
     height: 550px;
     width: 550px;
     margin: 57px;
+    margin-top: 0;
 }
 
 .elements {
     margin: 20px;
+    margin-top: 0;
+}
 
+.main-title {
+    margin-top: 0;
+    padding-top: 50px;
 }
 
 .list {
-    font-size: 13px;
+    font-size: 15px;
+    line-height: 30px;
+}
+
+li{
+    list-style: none;
+}
+
+// ul li {
+//     // background: url(https://www.computerhope.com/issues/pictures/bullet.gif) no-repeat top left ;
+//     // background-position: 0 5px;
+//     line-height: 1.5625;
+//     padding: 0 0 4px 30px;
+//     // margin-left: 1em;
+//    }
+
+li::before {
+    content: "•"; 
+    color: $bullet-color;
+    display: inline-block; 
+    width: 1.5em;
+    
+    margin-left: -1em
 }
