--- a/project-no-2/src/scss/style.scss
+++ b/project-no-2/src/scss/style.scss
@@ -11,7 +11,6 @@ $navbar-text-color: #DEEBF8;
 }
 
 .App {
-    // display: flex;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    left: 28%;
 }
