--- a/project-no-2/src/scss/style.css
+++ b/project-no-2/src/scss/style.css
@@ -25,7 +25,7 @@
 .main {
   background-color: #33373E;
   color: #FFFFFF;
-  height: 550px;
+  height: 400px;
   width: 550px;
   margin: 57px;
   margin-top: 0;
@@ -63,6 +63,6 @@ li::before {
 }
 
 .App {
-  justify-content: center;
-  align-items: center;
+  position: absolute;
+  left: 28%;
 }/*# sourceMappingURL=style.css.map */
