--- a/project-no-2/src/scss/style.scss
+++ b/project-no-2/src/scss/style.scss
@@ -1,16 +1,18 @@
-@import 'navbar';
-@import 'main';
+@import "navbar";
+@import "main";
 
-$navbar-color: #21222A;
+$navbar-color: #21222a;
 
-$navbar-text-color: #DEEBF8;
-
+$navbar-text-color: #deebf8;
 
 * {
-    font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
+
+
 .App {
-    position: absolute;
-    left: 28%;
+  margin-left: auto;
+  margin-right: auto;
+  display: table;
 }
