--- a/project-no-2/src/scss/_navbar.scss
+++ b/project-no-2/src/scss/_navbar.scss
@@ -11,7 +11,7 @@ $logo-text: #61DAFB;
     color: $logo-text;
     display: flex;
     // justify-content: space-between;
-    background-color: #21222A;
+    background-color: plum;
     width: 550px;
     height: 91px;
     margin: 57px;
